--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');
+
+font-family: 'Open Sans',
+sans-serif;
+font-family: 'Poppins',
+sans-serif;
+
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+
+:root {
+  --ff-open-sans: 'Open Sans',
+    sans-serif;
+  --ff-poppins: 'Poppins',
+    sans-serif;
+  --clr-violet: hsl(257, 40%, 49%)
 }
 
 :root {
